fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{
     font-family: 'Roboto', sans-serif;
     height: 100vh;
+    overflow-x:hidden;
+    overflow-y:hidden;
 }
 
 header{
